--- a/packages/divbase-api/src/divbase_api/templates/base.html
+++ b/packages/divbase-api/src/divbase_api/templates/base.html
@@ -35,12 +35,12 @@
     
     <main class="flex-shrink-0">
         {% include "components/alerts.html" %}
+        {% include "components/breadcrumbs.html" %}
         {% block content %}{% endblock %}
     </main>
     
     {% include "components/footer.html" %}
     
-
     {# Bootstrap JS can be defered to the end of body #}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
