--- a/packages/divbase-api/src/divbase_api/templates/components/navbar.html
+++ b/packages/divbase-api/src/divbase_api/templates/components/navbar.html
@@ -26,7 +26,7 @@
                 {% endif %}
                 {% if current_user %}
                 <li class="nav-item dropdown">
-                    <a class="nav-link scilife-nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
+                    <a class="nav-link scilife-nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-label="User menu for {{ current_user.email }}">
                         <i class="bi bi-person-circle me-1"></i>{{ current_user.email }}
                     </a>
                     <ul class="dropdown-menu">
