--- a/packages/divbase-api/src/divbase_api/templates/project_pages/detail.html
+++ b/packages/divbase-api/src/divbase_api/templates/project_pages/detail.html
@@ -92,7 +92,7 @@
                                     <i class="bi bi-clipboard-check me-2"></i>
                                 </button>
                             </div>
-                            <pre id="cliCommand"><code>divbase-cli config add-project {{ project.name }}</code></pre>
+                            <pre id="cliCommand"><code>divbase-cli config add {{ project.name }}</code></pre>
                             </div>
                         </div>
                     </div>
