--- a/packages/divbase-api/src/divbase_api/templates/index.html
+++ b/packages/divbase-api/src/divbase_api/templates/index.html
@@ -3,11 +3,13 @@
 
 {% block title %}DivBase Home page{% endblock %}
 
-
 {% block content %}
 <div class="container">
     <div class="row justify-content-between mb-4">
         <div class="col-md-12">
+            {% if announcements %}
+                {% include "components/announcements.html" %}
+            {% endif %}
             <div class="d-flex justify-content-between align-items-center">
                 <div class="scilife-subsection">
                     <h2><i class="bi bi-database-fill me-2"></i>Welcome to DivBase</h2>
