--- a/packages/divbase-api/src/divbase_api/templates/components/announcements.html
+++ b/packages/divbase-api/src/divbase_api/templates/components/announcements.html
@@ -11,7 +11,7 @@
         <i class="bi bi-info-circle-fill me-2"></i>
         {% endif %}
         {{ announcement.heading }}
-        </strong> 
-    <p>{{ announcement.message }}</p>
+    </strong></p>
+    {% if announcement.message %}<p>{{ announcement.message }}</p>{% endif %}
 </div>
 {% endfor %}
