--- a/packages/divbase-api/src/divbase_api/templates/components/registration_form.html
+++ b/packages/divbase-api/src/divbase_api/templates/components/registration_form.html
@@ -9,6 +9,7 @@
             </div>
             <div class="card-body p-4">
                 <form method="post" action="/register" id="registerForm">
+
                     <div class="mb-3">
                         <label for="name" class="form-label">Full Name</label>
                         <div class="input-group">
@@ -45,6 +46,54 @@
                     </div>
 
                     <div class="mb-3">
+                        <label for="organisation_dropdown" class="form-label">Organisation</label>
+                        <div class="input-group">
+                            <span class="input-group-text">
+                                <i class="bi bi-building"></i>
+                            </span>
+                            <select class="form-select" id="organisation_dropdown" name="organisation" required>
+                                <option value="" disabled selected>Select an organisation...</option>
+                                <option value="Other" {% if organisation == 'Other' %}selected{% endif %}>Other</option>
+                                {% for org in swedish_universities %}
+                                    <option value="{{ org }}" {% if organisation == org %}selected{% endif %}>{{ org }}</option>
+                                {% endfor %}
+                            </select>
+                        </div>
+                        <small class="text-muted">Please select "Other" if your organisation is not listed.</small>
+                    </div>
+                    {# This is only displayed if the "Other" option is selected in the organisation dropdown #}
+                    <div class="mb-3" id="other_organisation_div" style="display: none;">
+                        <label for="organisation_other" class="form-label">Please add your organisation's name</label>
+                        <div class="input-group">
+                             <span class="input-group-text">
+                                <i class="bi bi-building-add"></i>
+                            </span>
+                            <input type="text"
+                                class="form-control"
+                                id="organisation_other"
+                                name="organisation_other"
+                                placeholder="Enter your organisation's name"
+                                value="{{ organisation_other or '' }}">
+                        </div>
+                    </div>
+
+                    <div class="mb-3">
+                        <label for="organisation_role" class="form-label">Role at Organisation</label>
+                        <div class="input-group">
+                            <span class="input-group-text">
+                                <i class="bi bi-briefcase"></i>
+                            </span>
+                            <input type="text"
+                                class="form-control"
+                                id="organisation_role"
+                                name="organisation_role"
+                                placeholder="e.g. PhD Student, Researcher"
+                                value="{{ organisation_role or '' }}"
+                                required>
+                        </div>
+                    </div>
+
+                    <div class="mb-3">
                         <label for="password" class="form-label">Password</label>
                         <div class="input-group">
                             <span class="input-group-text">
@@ -65,7 +114,7 @@
                         <label for="confirm_password" class="form-label">Confirm Password</label>
                         <div class="input-group">
                             <span class="input-group-text">
-                                <i class="bi bi-lock-fill"></i>
+                                <i class="bi bi-lock"></i>
                             </span>
                             <input type="password" 
                                 class="form-control" 
@@ -104,3 +153,7 @@
         </div>
     </div>
 </div>
+
+{% block custom_scripts %}
+<script src="/static/js/registration_form.js"></script>
+{% endblock %}
